# fwge

./: .eslintrc.yml  .gitignore  .nycrc  Gruntfile.js  README.md  ReadMe.md  concat.js  document.js  example.js  example.ts  files.js  fwge.js  jsconfig.json  link.config.json  npm  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  template.html  test.js  test.ts  tscommand-4f4819d3.tmp.txt  tsconfig.base.json  tsconfig.json  turbo.json  watch.js  webpack.config.js
apps/editor/src-tauri/: Cargo.toml  __out.js  __out.json  tauri.conf.json
apps/editor/src-tauri/__out/: Project.js  main.js
apps/editor/src-tauri/__out/assets/: CubeMesh.js  CubeShader.js  GridMesh.js  GridShader.js
apps/editor/src-tauri/__out/components/: EditorTag.js
apps/editor/src-tauri/__out/decorators/: Class.decorator.js  Component.decorator.js
apps/editor/src-tauri/__out/entities/: Camera.js  EditorViewer.js  Environment.js  GeneralAreaLight.js  Grid.js  Sun.js
apps/editor/src-tauri/__out/scenes/: Editor.js  Scene1.js
apps/editor/src-tauri/__out/systems/: EditorRenderSystem.js  ProjectRenderSystem.js
apps/editor/src-tauri/cli/: load-project.cjs
apps/editor/src-tauri/src/: commands.rs  editor.rs  fwge.rs  fwgeproject.rs  main.rs  menu.rs  project.rs  utils.rs
apps/editor/src-tauri/src/commands/: launcher.rs
apps/editor/src-tauri/src/editor/: events.rs  ids.rs  models.rs
apps/editor/src-tauri/src/fwge/: commands.rs  models.rs
apps/editor/src-tauri/src/menu/: events.rs  ids.rs  models.rs
apps/editor/src-tauri/src/project/: commands.rs  models.rs  (+2 more)
(+1364 files in other folders)
