[package]
name = "editor"
version = "0.0.0"
description = "A Tauri App"
authors = ["Tebogo Christopher Seshibe"]
license = ""
repository = ""
default-run = "editor"
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "fs-copy-file", "fs-exists", "window-minimize", "fs-read-file", "fs-read-dir", "window-hide", "shell-open", "path-all", "fs-write-file", "fs-create-dir", "window-close", "window-show", "window-maximize", "dialog-all",
] }
serde_yml = "0.0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
